--- a/src/content/blog/unicode-graphs/index.mdx
+++ b/src/content/blog/unicode-graphs/index.mdx
@@ -5,7 +5,8 @@ banner: "demo.mp4"
 pubDate: 2022-01-10T21:09:02-04:00
 tags: ["fsharp"]
 ---
-import Video from '../../../components/Video.astro';
+
+import Video from "../../../components/Video.astro";
 
 ![Screenshot](banner.png)
 
