--- a/src/content/blog/mapgen/intro.mdx
+++ b/src/content/blog/mapgen/intro.mdx
@@ -4,7 +4,7 @@ author: "theor"
 type: "post"
 pubDate: 2021-03-08T01:19:39-05:00
 description: ""
-banner: "intro/3d.png"
+# banner: "./intro/3d.png"
 tags: ["procedural generation", "unity", "burst"]
 serie_part: 1
 ---
