--- a/src/content/blog/doom-maps-laser-cut/index.mdx
+++ b/src/content/blog/doom-maps-laser-cut/index.mdx
@@ -143,3 +143,6 @@ I gave up on that approach at this point. The actual solution to the preview, a 
 ![Blender render of the tinkercad glb](./doom-render.png)
 
 # Result
+
+![asd](./doom-render3.webp)
+![asd](./doom-render4.webp)
