--- a/src/content/blog/doom-maps-laser-cut/index.mdx
+++ b/src/content/blog/doom-maps-laser-cut/index.mdx
@@ -87,8 +87,55 @@ Strictly speaking, this is enough to produce a SVG that can be laser cut.
 
 # Reducing the layer count
 
+It is now time to separate sectors into layers, according to their floor height. This is done by providing an array of heights and grouping sectors by the smallest upper bound, eg. I used `[-70, -24, 0, 40]` for E1M1.
+
+It could be automated, but I went for artistic control. Sectors could be sorted by ascending height, then split into groups of similar size. That group size could be in function of sector counts or areas. Another criteria could be the sector properties - if a sector is flagged as causing damage (acid, lava...) it could deserve its own layer.
+
+Mayne I'll investigate later ; my gut feeling is that this problem is related to [Map coloring](https://en.wikipedia.org/wiki/Map_coloring).
+
 # Writing SVG
 
+I've used the [svg crate](https://crates.io/crates/svg) in previous experiments. It is barebone, with no attribute type, but works.
+
+For laser cutting, I need :
+- one color for each layer
+- another for _internal lines_ that I intend to engrave
+- another for _positioning lines_. Some layers contain loose parts I'll need to correctly position before glueing them ; the positioning lines draw those pieces'position on the layer underneath.
+
+This is the result for E1M1, with the internal lines in red and the positioning lines in cyan:
+<img src="./E1M1.svg"/>
+
+
+## Interlude: Halton sequence
+
+I spent a lot of time generating svgs with various colors to validate my work. I reused a trick I'm fond of to generate semi-random colors: using a Halton sequence output as the hue of a `HSL` color.
+
+```rust
+// base, f are parameters here
+let mut halton = halton::Sequence::new(base);
+
+for i in 0..sectors.len() {
+    let color = colorsys::Hsl::from((
+        // hue 0-360
+        (h * 360.0 * f) % 360.0,
+        // saturation 0-100
+        80.0,
+        // lightness 0-100
+        50.0
+    )).to_css_string();
+}
+```
+
+It is similar to using a pseudorandom generator with a fixed seed, but the Halton sequence is more evenly distributed. Here is the result for 100 values with a few base/f combinations :
+
+<div class="gallery">
+<Figure caption="base = 11 , f = 1" src="./halton-11.svg" />
+<Figure caption="base = 17 , f = 1" src="./halton-17.svg" />
+<Figure caption="base = 23 , f = 1" src="./halton-23.svg" />
+<Figure caption="base = 11 , f = 1.5" src="./halton-1_5-11.svg" />
+<Figure caption="base = 17 , f = 1.5" src="./halton-1_5-17.svg" />
+<Figure caption="base = 23 , f = 1.5" src="./halton-1_5-23.svg" />
+</div>
 
 # Today's rabbit hole: 3D rendering and triangulation
 
@@ -140,9 +187,8 @@ But wait, the WAD does contain simple, convex polygons, right ? The result of th
 
 I gave up on that approach at this point. The actual solution to the preview, a very valid problem, was simpler: use [TinkerCad](https://www.tinkercad.com/) to import the svg layers, extrude them, stack them export a .glb I could render in blender. That's how I rendered the banner of this article. Note that tinkercad's SVG import do expect actual SVG paths and not disjoint lines ; so part of that work did serve to produce a cute render.
 
-![Blender render of the tinkercad glb](./doom-render.png)
+![Blender render of E1M1](./doom-render.png)
+![Blender render of E1M2](./doom-render3.webp)
+![Blender render of E1M2](./doom-render4.webp)
 
-# Result
-
-![asd](./doom-render3.webp)
-![asd](./doom-render4.webp)
+# Final Result
