--- a/src/content/blog/doom-maps-laser-cut/index.mdx
+++ b/src/content/blog/doom-maps-laser-cut/index.mdx
@@ -192,3 +192,7 @@ I gave up on that approach at this point. The solution to the preview, a very va
 ![Blender render of E1M2](./doom-render4.webp)
 
 # Final Result
+
+Just have to glue it now ! I definitely need to try it with clear acry lic or with multiple colors.
+
+![result](laser.jpg)
