--- a/src/content/blog/doom-maps-laser-cut/index.mdx
+++ b/src/content/blog/doom-maps-laser-cut/index.mdx
@@ -17,7 +17,7 @@ I'll go through the process, from the data extraction to the geometry reconstruc
 
 DOOM's data was designed with modding as a goal : the entire game is an executable and a `.WAD` data pack. The shareware/demo version shipped with DOOM1.WAD, which is still available freely.
 
-<Video caption="Doom WAD format, illustrated with MotionCanvas" width="100%" height="auto" src={import("./wad.mp4")}/>
+<Video caption="Doom WAD format, illustrated with MotionCanvas" width="100%" height="auto" src={import("./wad.m4v")}/>
 
 The WAD format is well documented - see the [Unofficial DOOM spec](https://www.gamers.org/dhs/helpdocs/dmsp1666.html) or the [ZDoom wiki](https://zdoom.org/wiki/WAD). The gist of it is :
 - the WAD file starts with a header follow by the actual data, ends with directory entries describing that data
