--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -12,6 +12,10 @@ setup: |
 import Run from "./Run.astro"
 
 # Title
-<Run id="asd"/>
+<Run id="asd" data-message="777"/>
+
+ipsum
+
+<Run id="asd2" data-message="wwwww"/>
 
 <span>asdasd</span>
