cleanup attempt + wasm

--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -9,10 +9,10 @@ tags: []
 setup: |
   console.log("qwe")
 ---
-import Run from "./Run.astro"
+import Run from "./_Run.astro"
 
 # Title
-<Run id="asd" data-message="777"/>
+<Run id="asd" data-message="777" data-x="90"/>
 
 ipsum
 
