--- a/src/content/blog/mapgen/random-2d-points/part1.mdx
+++ b/src/content/blog/mapgen/random-2d-points/part1.mdx
@@ -6,7 +6,7 @@ pubDate: 2021-03-08T01:19:40-05:00
 description: ""
 slug: "mapgen/random-2d-points"
 tags: ["procgen", "unity", "burst"]
-banner: "images/HaltonColors.png"
+banner: "_images/_HaltonColors.png"
 serie_part: 2
 toc: true
 ---
