--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -11,11 +11,14 @@ setup: |
 ---
 import Run from "./_Run.astro"
 
+<Run id="asd3" data-sample="firestate" data-message="wwwww"/>
+
 # Title
 <Run  id="asd" data-message="777" data-x="90"/>
 
 ipsum
 
-<Run id="asd2" data-message="wwwww"/>
+<Run id="asd2" data-sample="svg" data-message="wwwww"/>
 
-<span>asdasd</span>
+asdasd
+
