--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -11,6 +11,8 @@ setup: |
 ---
 import Run from "./_Run.astro"
 
+<Run data-sample="Plasma" />
+
 <Run id="asd3" data-sample="firestate" data-message="wwwww"/>
 
 # Title
