--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -11,16 +11,16 @@ setup: |
 ---
 import Run from "./_Run.astro"
 
+<Run data-sample="Stars" />
+
 <Run data-sample="Plasma" />
 
 <Run id="asd3" data-sample="firestate" data-message="wwwww"/>
 
 # Title
-<Run  id="asd" data-message="777" data-x="90"/>
 
 ipsum
-
-<Run id="asd2" data-sample="svg" data-message="wwwww"/>
+ 
 
 asdasd
 
