better integration, star mouse pointer

--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -11,12 +11,19 @@ setup: |
 ---
 import Run from "./_Run.astro"
 
-<Run data-sample="Stars" />
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae convallis magna. Nunc vitae pellentesque justo, eget accumsan quam. Integer a rutrum tellus. Vivamus placerat condimentum nisl, et scelerisque ante vulputate eget. Phasellus pharetra dui at dignissim accumsan. Pellentesque non leo ipsum. Proin eget elit sagittis, luctus massa et, tempor nulla. Sed tempor lacus quam, vitae porta nisi lobortis sed. Vestibulum lacinia fermentum luctus. Suspendisse a tortor id purus suscipit tincidunt. Curabitur venenatis metus vel sollicitudin vestibulum. Curabitur id ligula id neque sagittis consequat at quis sem. Nullam nisl sem, porta id metus ac, facilisis ultrices lectus.
+
+<Run data-sample="Stars" height="1024px" />
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae convallis magna. Nunc vitae pellentesque justo, eget accumsan quam. Integer a rutrum tellus. Vivamus placerat condimentum nisl, et scelerisque ante vulputate eget. Phasellus pharetra dui at dignissim accumsan. Pellentesque non leo ipsum. Proin eget elit sagittis, luctus massa et, tempor nulla. Sed tempor lacus quam, vitae porta nisi lobortis sed. Vestibulum lacinia fermentum luctus. Suspendisse a tortor id purus suscipit tincidunt. Curabitur venenatis metus vel sollicitudin vestibulum. Curabitur id ligula id neque sagittis consequat at quis sem. Nullam nisl sem, porta id metus ac, facilisis ultrices lectus.
 
 <Run data-sample="Plasma" />
 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae convallis magna. Nunc vitae pellentesque justo, eget accumsan quam. Integer a rutrum tellus. Vivamus placerat condimentum nisl, et scelerisque ante vulputate eget. Phasellus pharetra dui at dignissim accumsan. Pellentesque non leo ipsum. Proin eget elit sagittis, luctus massa et, tempor nulla. Sed tempor lacus quam, vitae porta nisi lobortis sed. Vestibulum lacinia fermentum luctus. Suspendisse a tortor id purus suscipit tincidunt. Curabitur venenatis metus vel sollicitudin vestibulum. Curabitur id ligula id neque sagittis consequat at quis sem. Nullam nisl sem, porta id metus ac, facilisis ultrices lectus.
+
 <Run id="asd3" data-sample="firestate" data-message="wwwww"/>
 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae convallis magna. Nunc vitae pellentesque justo, eget accumsan quam. Integer a rutrum tellus. Vivamus placerat condimentum nisl, et scelerisque ante vulputate eget. Phasellus pharetra dui at dignissim accumsan. Pellentesque non leo ipsum. Proin eget elit sagittis, luctus massa et, tempor nulla. Sed tempor lacus quam, vitae porta nisi lobortis sed. Vestibulum lacinia fermentum luctus. Suspendisse a tortor id purus suscipit tincidunt. Curabitur venenatis metus vel sollicitudin vestibulum. Curabitur id ligula id neque sagittis consequat at quis sem. Nullam nisl sem, porta id metus ac, facilisis ultrices lectus.
 # Title
 
 ipsum
