--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -131,11 +131,11 @@ An indexed palette used to be a requirement - the above Amstrad CPC had at best 
 
 # Stars
 
-<Run data-sample="Stars" height="480" />
+<Run data-sample="Stars" />
 
 # Outrun 3d roads
 
-<Run data-sample="Roads" height="800"/>
+<Run data-sample="Roads"/>
 
 [Lou's pseudo 3d page](http://www.extentofthejam.com/pseudo/)
 
